Add ssession wrapper and test

--- a/src/wrappers/themis/Obj-C/makefile
+++ b/src/wrappers/themis/Obj-C/makefile
@@ -13,7 +13,10 @@ OBJS := $(patsubst objcthemis/%.m,objcthemis/%.o, $(SRCS))
 
 test: 
 	$(CC) -c smessage_test.m $(OBJC_PARAM) $(INC_PATH) $(LIB_PATH) $(LIBS)
-	$(CC) -o test smessage_test.o objcthemis.a $(OBJC_PARAM) $(INC_PATH) $(LIB_PATH) $(LIBS)
+	$(CC) -o smessage smessage_test.o objcthemis.a $(OBJC_PARAM) $(INC_PATH) $(LIB_PATH) $(LIBS)
+	$(CC) -c ssession_test.m $(OBJC_PARAM) $(INC_PATH) $(LIB_PATH) $(LIBS)
+	$(CC) -o ssesion ssesion_test.o objcthemis.a $(OBJC_PARAM) $(INC_PATH) $(LIB_PATH) $(LIBS)
+
 
 static: $(OBJS)
 	$(AR) rcs objcthemis.a $(OBJS)
