--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,31 @@ tests/tools/splint/source/src/.deps/**
 **.**~
 **.**#
 static_analysis.txt
+
+
+# iOS and OSX
+.DS_Store
+
+# TextMate noise
+*.tm_build_errors
+
+# Xcode noise, after https://github.com/github/gitignore/blob/master/Objective-C.gitignore
+# http://stackoverflow.com/a/12021580
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.moved-aside
+*~.nib
+*.swp
+
+
+# additional rules
+DerivedData/
+.idea/
+build
