--- a/docs/examples/objc/Podfile
+++ b/docs/examples/objc/Podfile
@@ -22,6 +22,7 @@ inhibit_all_warnings!
 
 target :"ThemisTest" do
 
-  pod 'themis'
+  # it's temporary solution until we will have always stable code in master :)
+  pod 'themis', :git => 'https://github.com/cossacklabs/themis.git', :commit => '33e0697d722c85ec999c0f18019ed6c30e6bdb25'
 
 end
