--- a/docs/examples/objc/Podfile
+++ b/docs/examples/objc/Podfile
@@ -22,6 +22,6 @@ inhibit_all_warnings!
 
 target :"ThemisTest" do
 
-  pod 'themis'
+  pod 'themis', :git => "https://github.com/cossacklabs/themis.git", :branch => 'ios-wrapper-refactoring'
 
 end
