--- a/circle.yml
+++ b/circle.yml
@@ -13,13 +13,14 @@ dependencies:
     - make test_all
     - sudo make install
     - sudo make pythonthemis_install
-    - sudo make rubythemis_install
+    - make rubythemis_install
 
 ## Customize test commands
 test:
   override:
     - build/tests/soter_test
     - build/tests/themis_test
+    - sudo /sbin/ldconfig
     - build/tests/pythemis_test.sh
     - build/tests/rubythemis_test.sh
     # start Android emulator
