--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,7 @@ dependencies:
     - make test
     - make test_all
     - sudo make install
-    - sudo make pythonthemis_install
+    - sudo make pythemis_install
     - sudo make rubythemis_install
 
 ## Customize test commands
