Add ios test to main test script

--- a/circle.yml
+++ b/circle.yml
@@ -20,7 +20,7 @@ test:
   pre:
     - IOS_BUILD_NUMBER=tests/start_ios_test.sh
   post:
-    - tests/check_ios_buid $IOS_BUILD_NUMBER
+    - tests/check_ios_test.sh $IOS_BUILD_NUMBER
   override:
     - build/tests/soter_test
     - build/tests/themis_test
