Add ios test to main test script

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,7 @@
 machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
+    IOS_BUILD_NUMBER: `tests/start_ios_test.sh`
 
 ## Customize dependencies
 dependencies:
@@ -18,7 +19,7 @@ dependencies:
 ## Customize test commands
 test:
   pre:
-    - export IOS_BUILD_NUMBER=`tests/start_ios_test.sh`
+#    - export IOS_BUILD_NUMBER=`tests/start_ios_test.sh`
     - echo $IOS_BUILD_NUMBER
   post:
     - tests/check_ios_test.sh $IOS_BUILD_NUMBER
