--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
-    IOS_BUILD_NUMBER: `tests/start_ios_test.sh`
+    IOS_BUILD_NUMBER: tests/start_ios_test.sh
 
 ## Customize dependencies
 dependencies:
