Add phpthemis to CircleCI tests

--- a/circle.yml
+++ b/circle.yml
@@ -14,6 +14,7 @@ dependencies:
     - sudo make install
     - sudo make pythemis_install
     - sudo make rubythemis_install
+    - sudo make phpthemis_install
 
 ## Customize test commands
 test:
