--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get install libssl-dev python3 python3-setuptools ruby phpunit
+    - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby
 
   override:
     - make
