--- a/circle.yml
+++ b/circle.yml
@@ -8,11 +8,11 @@ dependencies:
     - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby
 
   override:
-    - make
-    - make test
-    - make test_all
-    - sudo make install
-    - sudo make pythemis_install
+    - make SECURE_COMPARATOR=enable
+    - make SECURE_COMPARATOR=enable test
+    - make SECURE_COMPARATOR=enable test_all
+    - sudo make SECURE_COMPARATOR=enable install
+    - sudo make SECURE_COMPARATOR=enable pythemis_install
     - sudo make rubythemis_install
     - sudo make phpthemis_install
 
@@ -25,7 +25,6 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - make clean && make SECURE_COMPARATOR=enable && sudo make SECURE_COMPARATOR=enable install && sudo make SECURE_COMPARATOR=enable pythemis_install && ~/themis/build/tests/themis_test && ~/themis/build/tests/pythemis_test.sh
     - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
     - emulator -avd circleci-android22 -no-audio -no-window:
