Make secure comparator for Android conditionaly compiled

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,11 @@ android {
     sourceSets {
     	main {
     		java.srcDirs = ['src/wrappers/themis/java']
+    		
+    		if (System.env.SECURE_COMPARATOR != "enable") {
+    			java.excludes = ['com/cossacklabs/themis/SecureCompare.java', 'com/cossacklabs/themis/SecureCompareException.java']
+    		}
+    		
     		manifest.srcFile 'src/wrappers/themis/android/AndroidManifest.xml'
     		
     		jniLibs.srcDirs = ['libs']
@@ -30,6 +35,11 @@ android {
     	
     	androidTest.setRoot('tests/themis/wrappers/android')
         androidTest.java.srcDirs = ['tests/themis/wrappers/android']
+        
+        if (System.env.SECURE_COMPARATOR != "enable") {
+    		androidTest.java.excludes = ['com/cossacklabs/themis/test/SecureCompareTest.java']
+    	}
+        
         androidTest.manifest.srcFile 'tests/themis/wrappers/android/AndroidManifest.xml'
 
 	}
