--- a/circle.yml
+++ b/circle.yml
@@ -25,7 +25,7 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - tests/check_ios_test.sh `tests/start_ios_test.sh`
+    # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
     - emulator -avd circleci-android22 -no-audio -no-window:
         background: true
