--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: c
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get -y upgrade
+  - sudo apt-get -y upgrade -qq
   - sudo apt-get install -y libssl-dev
 
 install:
