--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
+sudo: false
 language: c
-before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get -y upgrade -qq
-  - sudo apt-get install -y libssl-dev
+
+addons:
+  apt:
+    packages:
+    - libssl-dev
 
 install:
   - make SECURE_COMPARATOR=enable
-  - sudo make SECURE_COMPARATOR=enable install
+  - make SECURE_COMPARATOR=enable install
   - make SECURE_COMPARATOR=enable test
 
 script:
