--- a/circle.yml
+++ b/circle.yml
@@ -12,6 +12,7 @@ dependencies:
     - make SECURE_COMPARATOR=enable test
     - make SECURE_COMPARATOR=enable test_all
     - sudo make SECURE_COMPARATOR=enable install
+    - sudo make SECURE_COMPARATOR=enable themispp_install
     - sudo make SECURE_COMPARATOR=enable pythemis_install
     - sudo make SECURE_COMPARATOR=enable rubythemis_install
     - sudo make SECURE_COMPARATOR=enable phpthemis_install
