Add ThemisPP tests to CircleCI

--- a/circle.yml
+++ b/circle.yml
@@ -9,13 +9,14 @@ dependencies:
 
   override:
     - make SECURE_COMPARATOR=enable
-    - make SECURE_COMPARATOR=enable test
-    - make SECURE_COMPARATOR=enable test_all
     - sudo make SECURE_COMPARATOR=enable install
     - sudo make SECURE_COMPARATOR=enable themispp_install
     - sudo make SECURE_COMPARATOR=enable pythemis_install
     - sudo make SECURE_COMPARATOR=enable rubythemis_install
     - sudo make SECURE_COMPARATOR=enable phpthemis_install
+    - make SECURE_COMPARATOR=enable test
+    - make SECURE_COMPARATOR=enable themispp_test
+    - make SECURE_COMPARATOR=enable test_all
 
 ## Customize test commands
 test:
