--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby nodejs npm gyp
+    - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby npm && curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo npm install -g node-gyp
 
   override:
     - make SECURE_COMPARATOR=enable
