--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby npm && curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo npm install -g node-gyp && sudo npm install -g mocha
+    - sudo apt-get update && sudo apt-get install libssl-dev python3 python3-setuptools ruby # npm && curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo npm install -g node-gyp && sudo npm install -g mocha
 
   override:
     - make SECURE_COMPARATOR=enable
@@ -14,7 +14,7 @@ dependencies:
     - sudo make SECURE_COMPARATOR=enable pythemis_install
     - sudo make SECURE_COMPARATOR=enable rubythemis_install
     - sudo make SECURE_COMPARATOR=enable phpthemis_install
-    - sudo make SECURE_COMPARATOR=enable jsthemis_install
+#    - sudo make SECURE_COMPARATOR=enable jsthemis_install
     - make SECURE_COMPARATOR=enable test
     - make SECURE_COMPARATOR=enable themispp_test
     - make SECURE_COMPARATOR=enable test_all
@@ -29,13 +29,13 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - sudo build/tests/node.sh
+#    - sudo build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
-#    - emulator -avd circleci-android22 -no-audio -no-window:
-#        background: true
+    - emulator -avd circleci-android22 -no-audio -no-window:
+        background: true
     # wait for it to have booted
-#    - circle-android wait-for-boot
+    - circle-android wait-for-boot
     # run Android tests
-#    - ./gradlew connectedAndroidTest
+    - ./gradlew connectedAndroidTest
 
