Make gothemis more idiomatic

--- a/circle.yml
+++ b/circle.yml
@@ -31,7 +31,7 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - go test -v gothemis 
+    - go test -v gothemis/...
 #    - sudo build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
