--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,6 @@ machine:
     GOROOT: $HOME/go
     GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
     GOPATH: $HOME/gopath
-    JAVA_HOME: /usr/lib/jvm/default-java
 
 ## Customize dependencies
 dependencies:
@@ -14,7 +13,7 @@ dependencies:
 
   override:
     - make SECURE_COMPARATOR=enable
-    - make SECURE_COMPARATOR=enable themis_jni
+    - make SECURE_COMPARATOR=enable JAVA_HOME=/usr/lib/jvm/default-java themis_jni
     - sudo make SECURE_COMPARATOR=enable install
     - sudo make SECURE_COMPARATOR=enable themispp_install
     - sudo make SECURE_COMPARATOR=enable pythemis_install
