--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,15 @@
 machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
-    GOROOT: $HOME/go
-    GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
-    GOPATH: $HOME/gopath
+#    GOROOT: $HOME/go
+#    GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
+#    GOPATH: $HOME/gopath
 
 ## Customize dependencies
 dependencies:
   pre:
     - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install cmake libssl-dev python3 python3-setuptools ruby # npm && curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo npm install -g node-gyp && sudo npm install -g mocha
-    - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
+#    - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
 
   override:
     - make SECURE_COMPARATOR=enable
@@ -25,8 +25,8 @@ dependencies:
     - make SECURE_COMPARATOR=enable test
     - make SECURE_COMPARATOR=enable themispp_test
     - make SECURE_COMPARATOR=enable test_all
-    - mkdir -p $GOPATH/src/$GOTHEMIS_IMPORT
-    - rsync -auv gothemis/ $GOPATH/src/$GOTHEMIS_IMPORT/
+#   - mkdir -p $GOPATH/src/$GOTHEMIS_IMPORT
+#   - rsync -auv gothemis/ $GOPATH/src/$GOTHEMIS_IMPORT/
 
 ## Customize test commands
 test:
@@ -40,7 +40,7 @@ test:
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
+#    - $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
 #    - sudo build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
