--- a/circle.yml
+++ b/circle.yml
@@ -1,14 +1,14 @@
 machine:
   environment:
     ANDROID_NDK_ROOT: $ANDROID_NDK
-#    GOROOT: $HOME/go
+    GOROOT: $HOME/go
     GOTHEMIS_IMPORT: github.com/cossacklabs/themis/gothemis
-#    GOPATH: $HOME/gopath
+    GOPATH: $HOME/gopath
 
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install cmake libssl-dev python3 python3-setuptools ruby # npm && curl -sL https://deb.nodesource.com/setup_5.x | sudo -E bash - && sudo apt-get install -y nodejs && sudo npm install -g node-gyp && sudo npm install -g mocha
+    - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python3 python3-setuptools ruby
     - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
 
   override:
@@ -19,29 +19,24 @@ dependencies:
     - sudo make SECURE_COMPARATOR=enable pythemis_install
     - sudo make SECURE_COMPARATOR=enable rubythemis_install
     - sudo make SECURE_COMPARATOR=enable phpthemis_install
-#    - sudo make SECURE_COMPARATOR=enable jsthemis_install
-    - cd $HOME && git clone https://boringssl.googlesource.com/boringssl && cd boringssl && git checkout chromium-stable && mkdir build && cd build && cmake .. && make && cp decrepit/libdecrepit.a crypto/
-    - make ENGINE=boringssl ENGINE_INCLUDE_PATH=$HOME/boringssl/include ENGINE_LIB_PATH=$HOME/boringssl/build/crypto BUILD_PATH=build_with_boringssl test
     - make SECURE_COMPARATOR=enable test
     - make SECURE_COMPARATOR=enable themispp_test
     - make SECURE_COMPARATOR=enable test_all
-    - mkdir -p $HOME/gopath/src/$GOTHEMIS_IMPORT
-    - rsync -auv gothemis/ $HOME/gopath/src/$GOTHEMIS_IMPORT/
+    - mkdir -p $GOPATH/src/$GOTHEMIS_IMPORT
+    - rsync -auv gothemis/ $GOPATH/src/$GOTHEMIS_IMPORT/
 
 ## Customize test commands
 test:
   override:
     - build/tests/soter_test
     - build/tests/themis_test
-    - build_with_boringssl/tests/soter_test
-    - build_with_boringssl/tests/themis_test
     - build/tests/themispp_test
     - sudo /sbin/ldconfig
     - build/tests/pythemis_test.sh
     - sudo build/tests/rubythemis_test.sh
     - build/tests/phpthemis_test.sh
-    - export GOROOT=$HOME/go && export GOPATH=$HOME/gopath && $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
-#    - sudo build/tests/node.sh
+    - $GOROOT/bin/go test -v $GOTHEMIS_IMPORT/...
+    - build/tests/node.sh
     # - tests/check_ios_test.sh `tests/start_ios_test.sh`
     # start Android emulator
     - emulator -avd circleci-android22 -no-audio -no-window:
