--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,11 @@ android {
 	}
 
     task ndkBuild(type: Exec) {
-		workingDir 'jni'
-        commandLine getNdkBuildCmd()
+	workingDir 'jni'
+        commandLine getNdkBuildCmd() 
+	if (project.hasProperty('boringssl_path')){
+	    args = ["BORINGSSL_PATH=$boringssl_path"]
+	}
     }
 
     tasks.withType(JavaCompile) {
