--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install cmake libssl-dev python3 python3-setuptools ruby ninja-build
+    - sudo apt-get update && sudo apt-get upgrade && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install cmake libssl-dev python3 python3-setuptools ruby ninja-build
     - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
 
   override:
