--- a/circle.yml
+++ b/circle.yml
@@ -8,11 +8,12 @@ machine:
 ## Customize dependencies
 dependencies:
   pre:
-    - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install php5 cmake libssl-dev python3 python3-setuptools ruby ninja-build
+    - sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install php5 cmake libssl-dev python3 python3-setuptools ruby ninja-build lcov
     - cd $HOME && wget https://storage.googleapis.com/golang/go1.6.2.linux-amd64.tar.gz && tar xf go1.6.2.linux-amd64.tar.gz
+    - gem install coveralls-lcov
 
   override:
-    - make SECURE_COMPARATOR=enable
+    - CFLAGS="-g -O0 --coverage" LDFLAGS="-lgcov" make SECURE_COMPARATOR=enable
     - make SECURE_COMPARATOR=enable JAVA_HOME=/usr/lib/jvm/default-java themis_jni
     - sudo make SECURE_COMPARATOR=enable install
     - sudo make SECURE_COMPARATOR=enable themispp_install
@@ -24,17 +25,21 @@ dependencies:
     - cd $HOME/boringssl && mkdir build-arm64-v8a && cd build-arm64-v8a && cmake -DANDROID_ABI=arm64-v8a -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - cd $HOME/boringssl && mkdir build-x86 && cd build-x86 && cmake -DANDROID_ABI=x86 -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - make ENGINE=boringssl ENGINE_INCLUDE_PATH=$HOME/boringssl/include ENGINE_LIB_PATH=$HOME/boringssl/build/crypto BUILD_PATH=build_with_boringssl test
-    - make SECURE_COMPARATOR=enable test
+    - CFLAGS="-g -O0 --coverage" LDFLAGS="-lgcov" make SECURE_COMPARATOR=enable test
     - make SECURE_COMPARATOR=enable themispp_test
     - make SECURE_COMPARATOR=enable test_all
     - mkdir -p $HOME/gopath/src/$GOTHEMIS_IMPORT
     - rsync -auv gothemis/ $HOME/gopath/src/$GOTHEMIS_IMPORT/
-
+    - lcov --directory . --zerocounters
 ## Customize test commands
 test:
   override:
     - build/tests/soter_test
     - build/tests/themis_test
+    - lcov --directory . --capture --output-file coverage.info
+    - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+    - lcov --list coverage.info
+    - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info
     - build_with_boringssl/tests/soter_test
     - build_with_boringssl/tests/themis_test
     - build/tests/themispp_test
