--- a/circle.yml
+++ b/circle.yml
@@ -11,7 +11,7 @@ dependencies:
     - gem install coveralls-lcov
 
   override:
-    - make COVERAGE=y
+    - make
     - make JAVA_HOME=/usr/lib/jvm/default-java themis_jni
     - sudo make install
     - sudo make themispp_install
@@ -23,7 +23,8 @@ dependencies:
     - cd $HOME/boringssl && mkdir build-arm64-v8a && cd build-arm64-v8a && cmake -DANDROID_ABI=arm64-v8a -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - cd $HOME/boringssl && mkdir build-x86 && cd build-x86 && cmake -DANDROID_ABI=x86 -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - make ENGINE=boringssl ENGINE_INCLUDE_PATH=$HOME/boringssl/include ENGINE_LIB_PATH=$HOME/boringssl/build/crypto BUILD_PATH=build_with_boringssl test
-    - make COVERAGE=y test
+    - make BUILD_PATH=cover_build test
+    - make test
     - make themispp_test
     - make test_all
     - mkdir -p $HOME/gopath/src/$GOTHEMIS_IMPORT
@@ -34,6 +35,8 @@ test:
   override:
     - build/tests/soter_test
     - build/tests/themis_test
+    - cover_build/tests/soter_test
+    - cover_build/tests/themis_test
     - lcov --directory . --capture --output-file coverage.info
     - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
     - lcov --list coverage.info
