--- a/circle.yml
+++ b/circle.yml
@@ -39,7 +39,7 @@ test:
     - cover_build/tests/soter_test
     - cover_build/tests/themis_test
     - lcov --directory . --capture --output-file coverage.info
-    - lcov --remove coverage.info 'tests/*' '/usr/*' --output-file coverage.info
+    - lcov --remove coverage.info 'tests/*' 'src/soter/openssl/*' '/usr/*' --output-file coverage.info
     - lcov --list coverage.info
     - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info
     - build_with_boringssl/tests/soter_test
