--- a/circle.yml
+++ b/circle.yml
@@ -58,5 +58,5 @@ test:
     # wait for it to have booted
     - circle-android wait-for-boot
     # run Android tests
-    - ./gradlew -Pboringssl_path=$HOME/boringssl connectedAndroidTest
+    - ./gradlew --info -Pboringssl_path=$HOME/boringssl connectedAndroidTest
 
