--- a/circle.yml
+++ b/circle.yml
@@ -23,7 +23,7 @@ dependencies:
     - cd $HOME/boringssl && mkdir build-armeabi-v7a && cd build-armeabi-v7a && cmake -DANDROID_ABI=armeabi-v7a -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - cd $HOME/boringssl && mkdir build-arm64-v8a && cd build-arm64-v8a && cmake -DANDROID_ABI=arm64-v8a -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
     - cd $HOME/boringssl && mkdir build-x86 && cd build-x86 && cmake -DANDROID_ABI=x86 -DCMAKE_TOOLCHAIN_FILE=../third_party/android-cmake/android.toolchain.cmake -DANDROID_NATIVE_API_LEVEL=16 -GNinja .. && ninja 
-    - make ENGINE=boringssl ENGINE_INCLUDE_PATH=$HOME/boringssl/include ENGINE_LIB_PATH=$HOME/boringssl/build/crypto BUILD_PATH=build_with_boringssl test
+#    - make ENGINE=boringssl ENGINE_INCLUDE_PATH=$HOME/boringssl/include ENGINE_LIB_PATH=$HOME/boringssl/build/crypto BUILD_PATH=build_with_boringssl test
     - make BUILD_PATH=cover_build COVERAGE=y test
     - make test
     - make themispp_test
@@ -44,8 +44,8 @@ test:
     - lcov --remove coverage.info 'tests/*' 'src/soter/openssl/*' '/usr/*' --output-file coverage.info
     - lcov --list coverage.info
 #    - coveralls-lcov -v --repo-token $COVERALLS_TOKEN coverage.info
-    - build_with_boringssl/tests/soter_test
-    - build_with_boringssl/tests/themis_test
+#    - build_with_boringssl/tests/soter_test
+#    - build_with_boringssl/tests/themis_test
     - build/tests/themispp_test
     - sudo /sbin/ldconfig
     - build/tests/pythemis_test.sh
