Add benchmarks for boringssl

--- a/benchmarks/Makefile
+++ b/benchmarks/Makefile
@@ -15,11 +15,19 @@
 #
 
 
+
+
+scell-bearssl: scell.c
+	gcc -I../src/ -I$(BEARSSL_PATH)/inc  -L../build_with_bearssl -L$(BEARSSL_PATH)/build -DCRYPTO_ENGINE_PATH=bearssl scell.c  -lthemis -lsoter -lbearssl -o scell-bearssl
+
 scell-libsodium: scell.c
 	gcc -I../src/ -I$(LIBSODIUM_PATH)/include  -L../build_with_libsodium -L$(LIBSODIUM_PATH)/.libs -DCRYPTO_ENGINE_PATH=libsodium scell.c  -lthemis -lsoter -lsodium -o scell-libsodium
 
 scell-openssl: scell.c
 	gcc -I../src/ -L../build scell.c -lthemis -lsoter -lcrypto -o scell-openssl
+
+smessage-bearssl: smessage.c
+	gcc -I../src/ -I$(BEARSSL_PATH)/inc  -L../build_with_bearssl -L$(BEARSSL_PATH)/build -DCRYPTO_ENGINE_PATH=bearssl smessage.c  -lthemis -lsoter -lbearssl -o smessage-bearssl
 
 smessage-libsodium: smessage.c
 	gcc -I../src/ -I$(LIBSODIUM_PATH)/include -L../build_with_libsodium -L$(LIBSODIUM_PATH)/.libs -DCRYPTO_ENGINE_PATH=libsodium smessage.c -lthemis -lsoter -lsodium -o smessage-libsodium
@@ -27,19 +35,22 @@ smessage-libsodium: smessage.c
 smessage-openssl: smessage.c
 	gcc -I../src/ -L../build smessage.c -lthemis -lsoter -lcrypto -o smessage-openssl
 
+ssession-bearssl: ssession.c
+	gcc -I../src/ -I$(BEARSSL_PATH)/inc  -L../build_with_bearssl -L$(BEARSSL_PATH)/build -DCRYPTO_ENGINE_PATH=bearssl ssession.c  -lthemis -lsoter -lbearssl -o ssession-bearssl
+
 ssession-libsodium: ssession.c
 	gcc -I../src/ -I$(LIBSODIUM_PATH)/include -L../build_with_libsodium -L$(LIBSODIUM_PATH)/.libs -DCRYPTO_ENGINE_PATH=libsodium ssession.c -lthemis -lsoter -lsodium -o ssession-libsodium
 
 ssession-openssl: ssession.c
 	gcc -I../src/ -L../build ssession.c -lthemis -lsoter -lcrypto -o ssession-openssl
 
-scell.csv: scell-libsodium scell-openssl
+scell.csv: scell-bearssl scell-libsodium scell-openssl
 	./benchmarks.sh scell 20000
 
-smessage.csv: smessage-libsodium smessage-openssl
+smessage.csv: smessage-bearssl smessage-libsodium smessage-openssl
 	./benchmarks.sh smessage 30000
 
-ssession.csv: ssession-libsodium ssession-openssl
+ssession.csv: ssession-bearssl ssession-libsodium ssession-openssl
 	./benchmarks.sh ssession 40000
 
 png: scell.csv smessage.csv ssession.csv
@@ -50,9 +61,12 @@ png: scell.csv smessage.csv ssession.csv
 clean:
 	rm *.csv
 	rm *.png
+	rm scell-bearssl
 	rm scell-libsodium
 	rm scell-openssl
+	rm smessage-bearssl
 	rm smessage-libsodium
 	rm smessage-openssl
+	rm ssession-bearssl
 	rm ssession-libsodium
 	rm ssession-openssl
